# ss-sample1

./: .gitignore  README.md  pyproject.toml
conf/: default_config.yaml
conf/preprocess/: default_config.yaml  jsut_basic5000.yaml
pytorch_template/: config.py  dataset.py  model.py
pytorch_template/networks/: predictor.py
scripts/: predict.py  preprocess.py  test.py  train.py
ss_sample1/: dataset.py  model.py
ss_sample1/configs/: preprocess.py
ss_sample1/modules/tacotron2/: audio_processing.py  layers.py  stft.py
ss_sample1/utils/: label.py
utils/: fix_label.py
