[tool.poetry]
name = "ss_sample1"
version = "0.1.0"
description = ""
authors = ["tksnn <tkser.edu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tqdm = "^4.66.1"
numpy = "^1.26.1"
lightning = "^2.1.1"
omegaconf = "^2.3.0"
torch = {version = "^2.1.0+cu118", source = "torch_cu118"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
wandb = "^0.16.0"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.ruff]
target-version = "py310"
line-length = 120
ignore = [
    "G004",
    "RUF001",
    "RUF002",
    "RUF003",
    "RET504",
    "ANN101",
    "ANN102",
    "ANN002",
    "ANN003",
    "INP001",
    "PLR0913",
    "NPY002",
    "D"
]
select = [
    "ALL"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
